[package]
name = "discordbot"
version = "0.1.0"
authors = ["Justin Doan <ivigideon25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.0.1", features = ["full", "macros", "rt-multi-thread"] }
sysinfo = "0.15.5"
reqwest = {version="0.11.0", features=["json"]}
serde = { version = "1.0", features = ["derive"] }